# VictorySquare

./: .gitmodules  Jenkinsfile  README.md  deploy.yml
Chess Engine/: CMakeLists.txt  board.cpp  build.sh  main.cpp  makefile  readme.md  utils.hpp
Chess Engine/engine/: CMakeLists.txt  board.cpp  board.hpp  main.cpp  utils.cpp
Chess Engine/tests/: CMakeLists.txt  tests.cpp
Database/: Dockerfile
Deployment/: Jenkinsfile  docker-compose.yml
Deployment/.logstash/: logstash.conf
DockerCompose/: docker-compose.yml
deployment/: Jenkinsfile  database.yaml  deploy.yml  elk.yaml  eureka.yaml  frontend.yaml  index.html  inventory  inventory.ini  microservices.yaml
deployment/ansible/: inventory.ini  playbook.yml
victory-square-authentication-service/: Dockerfile  pom.xml
victory-square-authentication-service/src/main/resources/: application.yml
victory-square-dataservice/: pom.xml
victory-square-dataservice/src/main/resources/: application.properties
victory-square-eureka-server/: Dockerfile  pom.xml
victory-square-eureka-server/src/main/resources/: application.properties
victory-square-frontend/: index.html  nginx.conf  package-lock.json  package.json
victory-square-frontend/src/: App.jsx  main.jsx
victory-square-frontend/src/Components/: Hero.jsx  Hero.scss  Navbar.jsx  Navbar.scss  UserInfoCard.jsx
victory-square-frontend/src/Context/: AppContext.jsx
victory-square-frontend/src/validations/: authValidation.jsx
victory-square-game-service/: Dockerfile  pom.xml
victory-square-gateway/: Dockerfile  pom.xml
(+55 files in other folders)
